Adjusting the Authenticated Endpoints